templates/che_template.yaml
---
# Source: che/charts/che-devfile-registry/templates/service.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: v1
kind: Service
metadata:
  labels:
    app: che
    component: devfile-registry
  name: devfile-registry
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: che
    component: devfile-registry
---
# Source: che/charts/che-plugin-registry/templates/service.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: v1
kind: Service
metadata:
  labels:
    app: che
    component: plugin-registry
  name: plugin-registry
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: che
    component: plugin-registry
---
# Source: che/templates/service.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: v1
kind: Service
metadata:
  labels:
    app: che
    component: che
  name: che-host
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: metrics
    port: 8087
    protocol: TCP
    targetPort: 8087
  selector:
    app: che
    component: che
---
# Source: che/charts/che-devfile-registry/templates/deployment.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: che
    component: devfile-registry
  name: devfile-registry
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: che
      component: devfile-registry
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: che
        component: devfile-registry
    spec:
      containers:
      - image: quay.io/eclipse/che-devfile-registry:nightly
        imagePullPolicy: Always
        name: che-devfile-registry
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /devfiles/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /devfiles/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 16Mi
---
# Source: che/charts/che-plugin-registry/templates/deployment.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: che
    component: plugin-registry
  name: plugin-registry
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: che
      component: plugin-registry
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: che
        component: plugin-registry
    spec:
      containers:
      - image: quay.io/eclipse/che-plugin-registry:nightly
        imagePullPolicy: Always
        name: che-plugin-registry
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /v3/plugins/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /v3/plugins/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 16Mi
---
# Source: che/templates/deployment.yaml
#
# Copyright (c) 2012-2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: che
    component: che
  name: che
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: che
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: che
        component: che
    spec:
      securityContext:
        fsGroup: 1724
      containers:
      - envFrom:
        - configMapRef:
            name: che
        image: eclipse/che-server:nightly
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1724
        livenessProbe:
          httpGet:
            path: /api/system/state
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 10
        name: che
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8000
          name: http-debug
        - containerPort: 8888
          name: jgroups-ping
        - containerPort: 8087
          name: http-metrics
        readinessProbe:
          httpGet:
            path: /api/system/state
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          timeoutSeconds: 60
        resources:
          limits:
            memory: 600Mi
          requests:
            memory: 256Mi
        volumeMounts:
        - mountPath: /data
          name: che-data-volume
      volumes:
      - name: che-data-volume
        persistentVolumeClaim:
          claimName: che-data-volume
      serviceAccountName: che
---
# Source: che/charts/che-devfile-registry/templates/ingress.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devfile-registry
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: devfile-registry-default.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: devfile-registry
          servicePort: 8080
---
# Source: che/charts/che-plugin-registry/templates/ingress.yaml
#
# Copyright (c) 2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: plugin-registry
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: plugin-registry-default.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: plugin-registry
          servicePort: 8080
---
# Source: che/templates/ingress.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: che-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  rules:
  - host: che-default.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: che-host
          servicePort: 8080
---
# Source: che/templates/exec-role.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
---
# Source: che/templates/metrics-ingress.yaml
#
# Copyright (c) 2012-2018 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
---
# Source: che/templates/registry-pull-secret.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
---
# Source: che/templates/workspace-exec-role-binding.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
---
# Source: che/templates/workspace-service-account.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
---
# Source: che/templates/workspace-view-role-binding.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
---
# Source: che/templates/workspace-view-role.yaml
#
# Copyright (c) 2012-2019 Red Hat, Inc.
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
#
# SPDX-License-Identifier: EPL-2.0
#
